Re-wrote friendly creepers. Added spider creeper. Re-added configuration.